--- a/html/cef-echo.html
+++ b/html/cef-echo.html
@@ -27,8 +27,23 @@ function onReceive(message) {
     writeToScreen('<span style="color: blue;">RESPONSE: ' + message + '</span>');
 }
 
-async function onReceiveAsync(message) {
-    await new Promise((r) => setTimeout(r, 100));
+function testFun1() {
+    return "testFun1";
+}
+
+async function onReceiveAsync(message, fun_body, async_fun_body) {
+    await new Promise((r) => setTimeout(r, 100)); // test for "await"
+
+    if (fun_body) {
+        let fun1 = new Function(fun_body);
+        message = message + fun1();
+    }
+    if (async_fun_body) {
+        const AsyncFunction = async function () { }.constructor;
+        let fun2 = new AsyncFunction(async_fun_body);
+        message = message + await fun2();
+    }
+
     writeToScreen('<span style="color: blue;">RESPONSE: ' + message + '</span>');
 }
 
